# llm_cache_patch_project

./: .dockerignore  .gitignore  Dockerfile  README.md  pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-pytest.yml
.github/workflows/.github/workflows/: ci.yml
benches/: .gitignore  README.md
benches/runners/: bench_cache.py  bench_eviction.py  bench_eviction_to_warmup.py
benches/utils/: flags_to_dict.py  utils.py  write_csv.py
benches/workloads/: _smoke_generators.py  _smoke_text_payloads.py  generators.py  payloads.py  smoke_text_payloads.py  text_payloads.py
bootstrap/: MANIFEST.json  apply_overlay.py  install_and_verify.py  rollback.py
docker/: entrypoint.py
docs/: Guidelines_Checklist.md
llm/: synthetic_llm.py
overlays/: MANIFEST.json
overlays/gptcache/: _llm_patch_probe.py
overlays/gptcache/manager/eviction/: memory_cache.py
overlays/gptcache/manager/eviction/policies/: gdsf.py  slru.py  tinylfu_slru.py
sDM/: __init__.py  sDM.py  sEM.py
sLLM/: synthetic_llm.py
tests/: conftest.py  test_gptcache_import.py  test_overlay_smoke.py
tests/policies/: test_tlfu_slru.py
tests/sDM_test/: sdm_test.py
tests/unit_tests/: test_gdsf.py  test_slru.py  test_tlfu_slru.py
